GoTogether initial commit

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-MONGO_URI=mongodb://127.0.0.1:27017/gotogether
-PORT=4000
+
+PORT=5000
+MONGO_URI=mongodb+srv://manishsonu2117_db_user:mJuuf1d0Kf2cuI8G@cluster0.5by8azh.mongodb.net/GoTogether?retryWrites=true&w=majority
+
